--- a/index.html
+++ b/index.html
@@ -2,41 +2,45 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>نمایش زیبا</title>
+  <title>نمایش ویدیوی جذاب</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       padding: 0;
-      background: linear-gradient(to right, #1e1e1e, #232526);
       font-family: 'Vazirmatn', sans-serif;
+      background: linear-gradient(135deg, #1f1c2c, #928dab);
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      color: white;
     }
 
     .container {
-      width: 80%;
-      max-width: 960px;
-      background: #2c2c2c;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 30px rgba(0,0,0,0.5);
-      transition: all 0.5s ease;
-    }
-
-    .container:hover {
-      box-shadow: 0 0 40px rgba(255, 255, 255, 0.1);
+      width: 90%;
+      max-width: 720px;
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(12px);
+      border-radius: 16px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.4);
+      padding: 16px;
     }
 
     iframe, script, #17059140073 {
       width: 100%;
-      height: 540px;
+      height: 360px;
+      border-radius: 12px;
       border: none;
-      border-radius: 8px;
+    }
+
+    @media (max-width: 480px) {
+      iframe, script, #17059140073 {
+        height: 220px;
+      }
+      .container {
+        padding: 10px;
+      }
     }
   </style>
 </head>
