--- a/index.html
+++ b/index.html
@@ -2,44 +2,51 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>نمایش ویدیوی جذاب</title>
+  <title>نمایش زیبا ویدیو</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- فونت فارسی -->
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    /* تنظیمات پایه */
     body {
       margin: 0;
       padding: 0;
       font-family: 'Vazirmatn', sans-serif;
-      background: linear-gradient(135deg, #1f1c2c, #928dab);
+      background: linear-gradient(135deg, #1f1c2c, #928dab); /* گرادیان جذاب */
       display: flex;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
     }
 
+    /* قاب پخش‌کننده با افکت شیشه‌ای */
     .container {
       width: 90%;
       max-width: 720px;
       background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(12px);
-      border-radius: 16px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.4);
+      backdrop-filter: blur(10px);
+      border-radius: 20px; /* گوشه‌های خمیده */
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
       padding: 16px;
+      overflow: hidden;
     }
 
-    iframe, script, #17059140073 {
+    /* تنظیمات اسکریپت آپارات */
+    #17059140073 {
       width: 100%;
       height: 360px;
-      border-radius: 12px;
-      border: none;
+      border-radius: 16px;
+      overflow: hidden;
     }
 
+    /* نسخه موبایل */
     @media (max-width: 480px) {
-      iframe, script, #17059140073 {
+      #17059140073 {
         height: 220px;
       }
       .container {
-        padding: 10px;
+        padding: 12px;
+        border-radius: 16px;
       }
     }
   </style>
@@ -47,7 +54,9 @@
 <body>
   <div class="container">
     <div id="17059140073"></div>
-    <script type="text/javascript" src="https://www.aparat.com/embed/x722241?data[rnddiv]=17059140073&data[responsive]=yes&autoplay=true"></script>
+    <script type="text/javascript"
+      src="https://www.aparat.com/embed/x722241?data[rnddiv]=17059140073&data[responsive]=yes&autoplay=true">
+    </script>
   </div>
 </body>
 </html>
