--- a/index.html
+++ b/index.html
@@ -2,36 +2,37 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>نمایش زیبا ویدیو</title>
+  <title>ویدیو آپارات</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- فونت فارسی -->
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    /* تنظیمات پایه */
     body {
       margin: 0;
       padding: 0;
       font-family: 'Vazirmatn', sans-serif;
-      background: linear-gradient(135deg, #1f1c2c, #928dab); /* گرادیان جذاب */
+      background-color: #000;
       display: flex;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
+      animation: fadeInBody 1.5s ease-in-out forwards;
+      opacity: 0;
     }
 
-    /* قاب پخش‌کننده با افکت شیشه‌ای */
     .container {
       width: 90%;
       max-width: 720px;
       background: rgba(255, 255, 255, 0.05);
       backdrop-filter: blur(10px);
-      border-radius: 20px; /* گوشه‌های خمیده */
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
+      border-radius: 20px;
+      box-shadow: 0 8px 24px rgba(255,255,255,0.1);
       padding: 16px;
       overflow: hidden;
+      animation: scaleIn 1.2s ease-in-out 0.8s forwards;
+      transform: scale(0.95);
+      opacity: 0;
     }
 
-    /* تنظیمات اسکریپت آپارات */
     #17059140073 {
       width: 100%;
       height: 360px;
@@ -39,7 +40,6 @@
       overflow: hidden;
     }
 
-    /* نسخه موبایل */
     @media (max-width: 480px) {
       #17059140073 {
         height: 220px;
@@ -47,6 +47,17 @@
       .container {
         padding: 12px;
         border-radius: 16px;
+      }
+    }
+
+    @keyframes fadeInBody {
+      to { opacity: 1; }
+    }
+
+    @keyframes scaleIn {
+      to {
+        transform: scale(1);
+        opacity: 1;
       }
     }
   </style>
