--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>ویدیو آپارات</title>
+  <title>ویدیو بدون حاشیه</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -15,8 +15,6 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      animation: fadeInBody 1.5s ease-in-out forwards;
-      opacity: 0;
     }
 
     .container {
@@ -26,18 +24,14 @@
       backdrop-filter: blur(10px);
       border-radius: 20px;
       box-shadow: 0 8px 24px rgba(255,255,255,0.1);
-      padding: 16px;
-      overflow: hidden;
-      animation: scaleIn 1.2s ease-in-out 0.8s forwards;
-      transform: scale(0.95);
-      opacity: 0;
+      overflow: hidden; /* خیلی مهمه برای بریدن لبه‌ها */
     }
 
     #17059140073 {
       width: 100%;
       height: 360px;
-      border-radius: 16px;
-      overflow: hidden;
+      border: none;
+      border-radius: 20px; /* لبه‌های خمیده برای پخش‌کننده */
     }
 
     @media (max-width: 480px) {
@@ -45,19 +39,7 @@
         height: 220px;
       }
       .container {
-        padding: 12px;
         border-radius: 16px;
-      }
-    }
-
-    @keyframes fadeInBody {
-      to { opacity: 1; }
-    }
-
-    @keyframes scaleIn {
-      to {
-        transform: scale(1);
-        opacity: 1;
       }
     }
   </style>
