--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>ویدیو بدون حاشیه</title>
+  <title>ویدیو آپارات</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
   <style>
@@ -10,11 +10,19 @@
       margin: 0;
       padding: 0;
       font-family: 'Vazirmatn', sans-serif;
-      background-color: #000;
+      background: linear-gradient(130deg, #0f0c29, #302b63, #24243e);
+      background-size: 600% 600%;
+      animation: gradientBG 12s ease infinite;
       display: flex;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
+    }
+
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     .container {
@@ -24,14 +32,16 @@
       backdrop-filter: blur(10px);
       border-radius: 20px;
       box-shadow: 0 8px 24px rgba(255,255,255,0.1);
-      overflow: hidden; /* خیلی مهمه برای بریدن لبه‌ها */
+      overflow: hidden;
+      animation: fadeIn 1.6s ease-out;
     }
 
     #17059140073 {
       width: 100%;
       height: 360px;
       border: none;
-      border-radius: 20px; /* لبه‌های خمیده برای پخش‌کننده */
+      border-radius: 20px;
+      overflow: hidden;
     }
 
     @media (max-width: 480px) {
@@ -40,6 +50,17 @@
       }
       .container {
         border-radius: 16px;
+      }
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: scale(0.95);
+      }
+      to {
+        opacity: 1;
+        transform: scale(1);
       }
     }
   </style>
