--- a/index.html
+++ b/index.html
@@ -10,19 +10,13 @@
       margin: 0;
       padding: 0;
       font-family: 'Vazirmatn', sans-serif;
-      background: linear-gradient(130deg, #0f0c29, #302b63, #24243e);
+      background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
       background-size: 600% 600%;
       animation: gradientBG 12s ease infinite;
       display: flex;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-    }
-
-    @keyframes gradientBG {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
     }
 
     .container {
@@ -32,6 +26,7 @@
       backdrop-filter: blur(10px);
       border-radius: 20px;
       box-shadow: 0 8px 24px rgba(255,255,255,0.1);
+      padding: 0; /* حذف padding برای جلوگیری از خط */
       overflow: hidden;
       animation: fadeIn 1.6s ease-out;
     }
@@ -39,9 +34,12 @@
     #17059140073 {
       width: 100%;
       height: 360px;
+      margin: 0 !important;
+      padding: 0 !important;
       border: none;
       border-radius: 20px;
       overflow: hidden;
+      display: block;
     }
 
     @media (max-width: 480px) {
@@ -53,15 +51,15 @@
       }
     }
 
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
     @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: scale(0.95);
-      }
-      to {
-        opacity: 1;
-        transform: scale(1);
-      }
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
     }
   </style>
 </head>
