--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>ویدیو آپارات</title>
+  <title>پخش ویدیو آپارات</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- فونت فارسی -->
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
@@ -11,9 +11,10 @@
       margin: 0;
       padding: 0;
       font-family: 'Vazirmatn', sans-serif;
-      background: linear-gradient(135deg, #1e202a, #3a3d52);
-      background-size: 400% 400%;
-      animation: gradientBG 16s ease infinite;
+      background-image: url('https://bayanbox.ir/view/5592656112678928833/Background.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -21,15 +22,18 @@
     }
 
     .frame-wrapper {
+      position: relative;
       width: 95%;
       max-width: 1024px;
       aspect-ratio: 16 / 9;
       border-radius: 20px;
       overflow: hidden;
-      box-shadow: 0 12px 32px rgba(0, 0, 0, 0.5);
-      animation: fadeIn 1.2s ease-out forwards;
+      box-shadow: 0 12px 40px rgba(0,0,0,0.5);
+      animation: fadeInUp 1.2s ease-out forwards;
       opacity: 0;
-      transform: scale(0.95);
+      transform: translateY(20px);
+      background: rgba(0,0,0,0.25); /* نیمه‌شفاف برای کنتراست بهتر */
+      backdrop-filter: blur(6px);
     }
 
     .frame-wrapper iframe {
@@ -39,20 +43,14 @@
       width: 100%;
       height: 100%;
       border: none;
-      border-radius: 20px;
       display: block;
+      border-radius: 20px;
     }
 
-    @keyframes gradientBG {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
-    }
-
-    @keyframes fadeIn {
+    @keyframes fadeInUp {
       to {
         opacity: 1;
-        transform: scale(1);
+        transform: translateY(0);
       }
     }
 
@@ -64,17 +62,20 @@
       .frame-wrapper iframe {
         border-radius: 16px;
       }
+      body {
+        background-attachment: scroll;
+        background-size: contain;
+      }
     }
   </style>
 </head>
 <body>
   <div class="frame-wrapper">
-    <iframe src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame"
+    <iframe
+      src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false"
       allow="autoplay; fullscreen"
       allowfullscreen
-      webkitallowfullscreen
-      mozallowfullscreen
-      title="تماشای ویدیو">
+      title="پخش ویدیو آپارات">
     </iframe>
   </div>
 </body>
