--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>پخش ویدیو آپارات</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- فونت فارسی -->
+  <!-- فونت فارسی زیبای Vazirmatn -->
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
   <style>
     body {
@@ -17,8 +17,9 @@
       background-position: center;
       background-attachment: fixed;
       display: flex;
-      align-items: center;
+      flex-direction: column;
       justify-content: center;
+      align-items: center;
       min-height: 100vh;
     }
 
@@ -48,24 +49,39 @@
       border-radius: 20px;
     }
 
-    @media (max-width: 768px) {
-      body {
-        background-attachment: scroll; /* جلوگیری از مشکل در برخی موبایل‌ها */
-        background-size: cover;       /* حفظ پوشش کامل تصویر */
-        background-position: center center;
-      }
-      .frame-wrapper {
-        border-radius: 16px;
-      }
-      .frame-wrapper iframe {
-        border-radius: 16px;
-      }
+    .footer {
+      margin-top: 24px;
+      color: white;
+      font-size: 0.9rem;
+      opacity: 0.7;
+      text-align: center;
     }
 
     @keyframes fadeInUp {
       to {
         opacity: 1;
         transform: translateY(0);
+      }
+    }
+
+    @media (max-width: 768px) {
+      body {
+        background-attachment: scroll;
+        background-size: cover;
+        background-position: center center;
+      }
+
+      .frame-wrapper {
+        border-radius: 16px;
+      }
+
+      .frame-wrapper iframe {
+        border-radius: 16px;
+      }
+
+      .footer {
+        font-size: 0.8rem;
+        margin-top: 16px;
       }
     }
   </style>
@@ -79,5 +95,6 @@
       title="پخش ویدیو آپارات">
     </iframe>
   </div>
+  <div class="footer">© Saeed Mojtabazadeh</div>
 </body>
 </html>
