--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>پخش ویدیو آپارات</title>
+  <title>مستند زندگی دکتر سعید مجتبی‌زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- فونت فارسی زیبای Vazirmatn -->
+
+  <!-- SEO حرفه‌ای -->
+  <meta name="description" content="مستند زندگی دکتر سعید مجتبی‌زاده | پخش با طراحی زیبا، ریسپانسیو، زمینه خاص، و تجربه‌ای حرفه‌ای از وب‌سایت ویدیویی.">
+  <meta name="keywords" content="مستند دکتر سعید مجتبی‌زاده, ویدیو آپارات, طراحی وب, HTML, صفحه حرفه‌ای, قالب واکنش‌گرا">
+  <meta name="author" content="Saeed Mojtabazadeh">
+  <meta property="og:title" content="مستند زندگی دکتر سعید مجتبی‌زاده">
+  <meta property="og:description" content="نمایش مستند با طراحی شیک، زمینه‌ی سفارشی، و قاب حرفه‌ای برای تجربه‌ی کاربری متفاوت">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://bayanbox.ir/view/5592656112678928833/Background.png">
+  <meta property="og:url" content="https://example.com">
+
+  <!-- فونت فارسی -->
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
+
+  <!-- Favicon سفارشی -->
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.ico">
+  
   <style>
     body {
       margin: 0;
@@ -13,14 +28,27 @@
       font-family: 'Vazirmatn', sans-serif;
       background-image: url('https://bayanbox.ir/view/5592656112678928833/Background.png');
       background-size: cover;
-      background-repeat: no-repeat;
       background-position: center;
+      background-repeat: no-repeat;
       background-attachment: fixed;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
       min-height: 100vh;
+    }
+
+    .title {
+      margin-top: 40px;
+      margin-bottom: 16px;
+      color: #ffffff;
+      font-size: 1.8rem;
+      font-weight: 700;
+      background: rgba(0, 0, 0, 0.4);
+      padding: 12px 24px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+      text-align: center;
+      backdrop-filter: blur(4px);
     }
 
     .frame-wrapper {
@@ -50,7 +78,7 @@
     }
 
     .footer {
-      margin-top: 24px;
+      margin: 32px 0 16px;
       color: white;
       font-size: 0.9rem;
       opacity: 0.7;
@@ -68,7 +96,12 @@
       body {
         background-attachment: scroll;
         background-size: cover;
-        background-position: center center;
+      }
+
+      .title {
+        font-size: 1.3rem;
+        margin-top: 24px;
+        padding: 10px 16px;
       }
 
       .frame-wrapper {
@@ -81,20 +114,22 @@
 
       .footer {
         font-size: 0.8rem;
-        margin-top: 16px;
       }
     }
   </style>
 </head>
 <body>
+  <div class="title">مستند زندگی دکتر سعید مجتبی‌زاده</div>
+
   <div class="frame-wrapper">
     <iframe
       src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false"
       allow="autoplay; fullscreen"
       allowfullscreen
-      title="پخش ویدیو آپارات">
+      title="پخش مستند آپارات">
     </iframe>
   </div>
+
   <div class="footer">© Saeed Mojtabazadeh</div>
 </body>
 </html>
