--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
       title="پخش ویدیو آپارات - محتوای آموزشی و سرگرمی">
     </iframe>
   </div>
-  <div class="footer">© Saeed Mojtabazadeh</div>
-</body>
-</html>
+  <div class="footer">
+  © <a href="http://www.mojtabazadeh.ir/" target="_blank" style="color: white; text-decoration: none; font-weight: 500;">
+    Saeed Mojtabazadeh | www.mojtabazadeh.ir
+  </a>
+</div>
+
