--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="keywords" content="ویدیو آپارات, تماشای آنلاین, آموزش تصویری, طراحی وب, قالب HTML, پخش ویدیو">
   <meta name="author" content="Saeed Mojtabazadeh">
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.ico">
+
   <!-- داده‌های Open Graph برای اشتراک‌گذاری در شبکه‌های اجتماعی -->
   <meta property="og:title" content="تماشای ویدیو آپارات | آموزش و سرگرمی">
   <meta property="og:description" content="نمایش ویدیو آپارات در قالبی زیبا، سریع و موبایل‌فرندلی">
