--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>تماشای ویدیو آپارات | آموزش، سرگرمی و محتواهای مفید</title>
+  <title>مستند زندگی دکتر سعید مجتبی زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="پخش ویدیو آپارات با طراحی زیبا، ریسپانسیو، و بهینه برای موبایل. تجربه‌ای خاص از آموزش، سرگرمی و محتواهای جذاب.">
-  <meta name="keywords" content="ویدیو آپارات, تماشای آنلاین, آموزش تصویری, طراحی وب, قالب HTML, پخش ویدیو">
+  <meta name="description" content="دکتری ژئوتکنیک، جوان برتر، مجتبی زاده، سعید مجتبی زاده، ژئوتکنیک.">
+  <meta name="keywords" content="مجتبی زاده، مجتبی زاده حسنلوئی، سعید مجتبی زاده، دکتری ژئوتکنیک، جوان نمونه، نخبه زنجان">
   <meta name="author" content="Saeed Mojtabazadeh">
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.ico">
 
-  <!-- داده‌های Open Graph برای اشتراک‌گذاری در شبکه‌های اجتماعی -->
-  <meta property="og:title" content="تماشای ویدیو آپارات | آموزش و سرگرمی">
-  <meta property="og:description" content="نمایش ویدیو آپارات در قالبی زیبا، سریع و موبایل‌فرندلی">
+  <!-- Open Graph -->
+  <meta property="og:title" content="تماشای مستند سعید مجتبی زاده | سعید مجتبی زاده">
+  <meta property="og:description" content="تماشای مستند زندگی سعید مجتبی زاده">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://bayanbox.ir/view/5592656112678928833/Background.png">
   <meta property="og:url" content="https://example.com">
@@ -105,7 +105,7 @@
       src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false"
       allow="autoplay; fullscreen"
       allowfullscreen
-      title="پخش ویدیو آپارات - محتوای آموزشی و سرگرمی">
+      title="مستند زندگی دکتر سعید مجتبی زاده">
     </iframe>
   </div>
   <div class="footer">
