--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>مستند زندگی دکتر سعید مجتبی زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="دکتری ژئوتکنیک، جوان برتر، مجتبی زاده، سعید مجتبی زاده، ژئوتکنیک.">
-  <meta name="keywords" content="مجتبی زاده، مجتبی زاده حسنلوئی، سعید مجتبی زاده، دکتری ژئوتکنیک، جوان نمونه، نخبه زنجان">
+  <meta name="description" content="مستند زندگی دکتر سعید مجتبی زاده، جوان برتر، مجتبی زاده، سعید مجتبی زاده، ژئوتکنیک">
+  <meta name="keywords" content="مجتبی زاده، مجتبی زاده حسنلوئی، سعید مجتبی زاده، دکتری ژئوتکنیک، جوان نمونه، نخبه زنجان، mojtabazadeh، saeed mojtabazadeh">
   <meta name="author" content="Saeed Mojtabazadeh">
 
   <!-- Favicon -->
