--- a/index.html
+++ b/index.html
@@ -4,19 +4,12 @@
   <meta charset="UTF-8">
   <title>مستند زندگی دکتر سعید مجتبی زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="مستند زندگی دکتر سعید مجتبی زاده، جوان برتر، مجتبی زاده، سعید مجتبی زاده، ژئوتکنیک">
-  <meta name="keywords" content="مجتبی زاده، مجتبی زاده حسنلوئی، سعید مجتبی زاده، دکتری ژئوتکنیک، جوان نمونه، نخبه زنجان، mojtabazadeh، saeed mojtabazadeh">
+  <meta name="description" content="دکتری ژئوتکنیک، جوان برتر، مجتبی زاده، سعید مجتبی زاده، ژئوتکنیک.">
+  <meta name="keywords" content="مجتبی زاده، مجتبی زاده حسنلوئی، سعید مجتبی زاده، دکتری ژئوتکنیک، جوان نمونه، نخبه زنجان">
   <meta name="author" content="Saeed Mojtabazadeh">
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.ico">
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="تماشای مستند سعید مجتبی زاده | سعید مجتبی زاده">
-  <meta property="og:description" content="تماشای مستند زندگی سعید مجتبی زاده">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="https://bayanbox.ir/view/5592656112678928833/Background.png">
-  <meta property="og:url" content="https://example.com">
 
   <!-- فونت فارسی -->
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
@@ -41,11 +34,40 @@
       color: white;
       font-size: 1.8rem;
       font-weight: bold;
-      margin-bottom: 16px;
+      margin-bottom: 12px;
       text-align: center;
+      animation: fadeInUp 0.8s ease-out forwards;
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+
+    .link-bar {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 12px;
+      margin-bottom: 12px;
       animation: fadeInUp 1s ease-out forwards;
       opacity: 0;
       transform: translateY(-20px);
+    }
+
+    .link-bar a {
+      background: rgba(255,255,255,0.15);
+      color: white;
+      padding: 10px 18px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 0.95rem;
+      backdrop-filter: blur(3px);
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+
+    .link-bar a:hover {
+      background: rgba(255,255,255,0.3);
+      transform: translateY(-3px);
     }
 
     .frame-wrapper {
@@ -96,8 +118,13 @@
       }
 
       .video-title {
-        font-size: 1.4rem;
-        margin-bottom: 12px;
+        font-size: 1.5rem;
+        margin-bottom: 10px;
+      }
+
+      .link-bar a {
+        font-size: 0.85rem;
+        padding: 8px 14px;
       }
 
       .frame-wrapper {
@@ -117,6 +144,13 @@
 </head>
 <body>
   <h1 class="video-title">مستند زندگی دکتر سعید مجتبی زاده</h1>
+
+  <div class="link-bar">
+    <a href="http://mojtabazadeh.ir/" target="_blank">وبسایت</a>
+    <a href="http://www.drmojtabazadeh.ir/" target="_blank">مقالات</a>
+    <a href="http://www.smoj.ir/" target="_blank">مطالعات</a>
+    <a href="http://www.instagallery.ir/" target="_blank">اینسگالری</a>
+  </div>
 
   <div class="frame-wrapper">
     <iframe
