--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   <meta name="keywords" content="مجتبی زاده، مجتبی زاده حسنلوئی، سعید مجتبی زاده، دکتری ژئوتکنیک، جوان نمونه، نخبه زنجان">
   <meta name="author" content="Saeed Mojtabazadeh">
 
-  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.ico">
-
-  <!-- فونت فارسی -->
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
   <style>
     body {
@@ -28,6 +25,25 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
+    }
+
+    .profile-pic {
+      width: 160px;
+      height: 160px;
+      border-radius: 50%;
+      overflow: hidden;
+      margin-bottom: 16px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.5);
+      animation: fadeInUp 0.6s ease-out forwards;
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+
+    .profile-pic img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
     }
 
     .video-title {
@@ -112,9 +128,9 @@
     }
 
     @media (max-width: 768px) {
-      body {
-        background-attachment: scroll;
-        background-size: cover;
+      .profile-pic {
+        width: 120px;
+        height: 120px;
       }
 
       .video-title {
@@ -143,6 +159,10 @@
   </style>
 </head>
 <body>
+  <div class="profile-pic">
+    <img src="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg" alt="Dr. Saeed Mojtabazadeh">
+  </div>
+
   <h1 class="video-title">مستند زندگی دکتر سعید مجتبی زاده</h1>
 
   <div class="link-bar">
