--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Vazirmatn', sans-serif;
-      background-image: url('https://bayanbox.ir/view/5592656112678928833/Background.png');
+      background-image: url('https://bayanbox.ir/view/6281946941252728307/Backgrond-2.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
