--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>مستند زندگی دکتر سعید مجتبی زاده</title>
+  <title>مسیر من: روایتی بر زندگی دکتر سعید مجتبی زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="دکتری ژئوتکنیک، جوان برتر، مجتبی زاده، سعید مجتبی زاده، ژئوتکنیک.">
   <meta name="keywords" content="مجتبی زاده، مجتبی زاده حسنلوئی، سعید مجتبی زاده، دکتری ژئوتکنیک، جوان نمونه، نخبه زنجان">
@@ -166,10 +166,10 @@
   <h1 class="video-title">مستند زندگی دکتر سعید مجتبی زاده</h1>
 
   <div class="link-bar">
-    <a href="http://mojtabazadeh.ir/" target="_blank">وبسایت</a>
-    <a href="http://www.drmojtabazadeh.ir/" target="_blank">مقالات</a>
-    <a href="http://www.smoj.ir/" target="_blank">مطالعات</a>
-    <a href="http://www.instagallery.ir/" target="_blank">اینسگالری</a>
+    <a href="http://mojtabazadeh.ir/" target="_blank">وبگاه من</a>
+    <a href="http://www.drmojtabazadeh.ir/" target="_blank">مقالات من</a>
+    <a href="http://www.smoj.ir/" target="_blank">مطالعات من</a>
+    <a href="http://www.instagallery.ir/" target="_blank">اینستاگالری</a>
   </div>
 
   <div class="frame-wrapper">
