--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <img src="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg" alt="Dr. Saeed Mojtabazadeh">
   </div>
 
-  <h1 class="video-title">مستند زندگی دکتر سعید مجتبی زاده</h1>
+  <h1 class="video-title">پایگاه مسیر من: روایتی بر زندگی دکتر سعید مجتبی زاده</h1>
 
   <div class="link-bar">
     <a href="http://mojtabazadeh.ir/" target="_blank">وبگاه من</a>
