--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
@@ -46,15 +47,39 @@
       display: block;
     }
 
-    .video-title {
-      color: white;
-      font-size: 1.8rem;
-      font-weight: bold;
-      margin-bottom: 12px;
+    .title-wrapper {
       text-align: center;
+      margin-bottom: 16px;
       animation: fadeInUp 0.8s ease-out forwards;
       opacity: 0;
       transform: translateY(-20px);
+    }
+
+    .title-line {
+      font-size: 2rem;
+      font-weight: 700;
+      margin: 0;
+      background: linear-gradient(90deg, #ffffff 0%, #ffe29e 20%, #ffda74 40%, #ffe29e 60%, #ffffff 80%);
+      background-size: 200% auto;
+      background-clip: text;
+      -webkit-background-clip: text;
+      color: transparent;
+      -webkit-text-fill-color: transparent;
+      animation: shine 2.5s linear infinite;
+      text-shadow: 0 2px 4px rgba(0,0,0,0.6);
+    }
+
+    .title-sub {
+      font-size: 1.2rem;
+      color: #ffddaa;
+      font-weight: 500;
+      margin-top: 4px;
+      text-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    }
+
+    @keyframes shine {
+      0% { background-position: 200% 0; }
+      100% { background-position: -200% 0; }
     }
 
     .link-bar {
@@ -133,9 +158,12 @@
         height: 120px;
       }
 
-      .video-title {
-        font-size: 1.5rem;
-        margin-bottom: 10px;
+      .title-line {
+        font-size: 1.6rem;
+      }
+
+      .title-sub {
+        font-size: 1rem;
       }
 
       .link-bar a {
@@ -163,7 +191,10 @@
     <img src="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg" alt="Dr. Saeed Mojtabazadeh">
   </div>
 
-  <h1 class="video-title">پایگاه مسیر من: روایتی بر زندگی دکتر سعید مجتبی زاده</h1>
+  <div class="title-wrapper">
+    <h1 class="title-line">پایگاه مسیر من</h1>
+    <h2 class="title-sub">روایتی بر زندگی دکتر سعید مجتبی زاده</h2>
+  </div>
 
   <div class="link-bar">
     <a href="http://mojtabazadeh.ir/" target="_blank">وبگاه من</a>
