--- a/index.html
+++ b/index.html
@@ -31,13 +31,11 @@
     .profile-pic {
       width: 160px;
       height: 160px;
-      border-radius: 50%;
+      border-radius: 60% 40% 55% 45% / 50% 60% 40% 50%;
       overflow: hidden;
       margin-bottom: 16px;
       box-shadow: 0 8px 24px rgba(0,0,0,0.5);
-      animation: fadeInUp 0.6s ease-out forwards;
-      opacity: 0;
-      transform: translateY(-20px);
+      animation: floatFrame 6s ease-in-out infinite;
     }
 
     .profile-pic img {
@@ -45,6 +43,12 @@
       height: 100%;
       object-fit: cover;
       display: block;
+    }
+
+    @keyframes floatFrame {
+      0% { transform: translateY(0) rotate(0deg); }
+      50% { transform: translateY(-6px) rotate(1deg); }
+      100% { transform: translateY(0) rotate(0deg); }
     }
 
     .title-wrapper {
@@ -56,17 +60,21 @@
     }
 
     .title-line {
-      font-size: 2rem;
-      font-weight: 700;
+      font-size: 2.4rem;
+      font-weight: 800;
       margin: 0;
-      background: linear-gradient(90deg, #ffffff 0%, #ffe29e 20%, #ffda74 40%, #ffe29e 60%, #ffffff 80%);
-      background-size: 200% auto;
+      background: radial-gradient(circle at center, #ffeec0, #ffcf70, #f0bb43);
       background-clip: text;
       -webkit-background-clip: text;
       color: transparent;
       -webkit-text-fill-color: transparent;
-      animation: shine 2.5s linear infinite;
-      text-shadow: 0 2px 4px rgba(0,0,0,0.6);
+      animation: pulseShine 4s ease-in-out infinite;
+      text-shadow: 0 0 8px rgba(255, 211, 108, 0.6), 0 0 18px rgba(255, 211, 108, 0.3);
+    }
+
+    @keyframes pulseShine {
+      0%, 100% { text-shadow: 0 0 8px rgba(255,211,108,0.6); }
+      50% { text-shadow: 0 0 18px rgba(255,211,108,0.9); }
     }
 
     .title-sub {
@@ -75,11 +83,6 @@
       font-weight: 500;
       margin-top: 4px;
       text-shadow: 0 1px 3px rgba(0,0,0,0.5);
-    }
-
-    @keyframes shine {
-      0% { background-position: 200% 0; }
-      100% { background-position: -200% 0; }
     }
 
     .link-bar {
