--- a/index.html
+++ b/index.html
@@ -29,13 +29,18 @@
     }
 
     .profile-pic {
-      width: 160px;
-      height: 160px;
-      border-radius: 60% 40% 55% 45% / 50% 60% 40% 50%;
+      width: 180px;
+      height: 180px;
+      border-radius: 55% 45% 60% 40% / 50% 60% 45% 55%;
       overflow: hidden;
       margin-bottom: 16px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.5);
-      animation: floatFrame 6s ease-in-out infinite;
+      box-shadow:
+        0 8px 24px rgba(0,0,0,0.5),
+        inset 0 0 12px rgba(255, 215, 150, 0.3),
+        0 0 10px rgba(255, 200, 100, 0.25);
+      border: 2px solid rgba(255,255,255,0.2);
+      backdrop-filter: blur(4px);
+      animation: frameGlow 8s ease-in-out infinite, floatFrame 6s ease-in-out infinite;
     }
 
     .profile-pic img {
@@ -45,9 +50,24 @@
       display: block;
     }
 
+    @keyframes frameGlow {
+      0%, 100% {
+        box-shadow:
+          0 8px 24px rgba(0,0,0,0.5),
+          inset 0 0 12px rgba(255, 215, 150, 0.3),
+          0 0 10px rgba(255, 200, 100, 0.25);
+      }
+      50% {
+        box-shadow:
+          0 12px 30px rgba(0,0,0,0.6),
+          inset 0 0 18px rgba(255, 230, 180, 0.4),
+          0 0 18px rgba(255, 180, 100, 0.4);
+      }
+    }
+
     @keyframes floatFrame {
       0% { transform: translateY(0) rotate(0deg); }
-      50% { transform: translateY(-6px) rotate(1deg); }
+      50% { transform: translateY(-6px) rotate(1.5deg); }
       100% { transform: translateY(0) rotate(0deg); }
     }
 
@@ -203,22 +223,4 @@
     <a href="http://mojtabazadeh.ir/" target="_blank">وبگاه من</a>
     <a href="http://www.drmojtabazadeh.ir/" target="_blank">مقالات من</a>
     <a href="http://www.smoj.ir/" target="_blank">مطالعات من</a>
-    <a href="http://www.instagallery.ir/" target="_blank">اینستاگالری</a>
-  </div>
-
-  <div class="frame-wrapper">
-    <iframe
-      src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false"
-      allow="autoplay; fullscreen"
-      allowfullscreen
-      title="مستند زندگی دکتر سعید مجتبی زاده">
-    </iframe>
-  </div>
-
-  <div class="footer">
-    © <a href="http://www.mojtabazadeh.ir/" target="_blank" style="color: white; text-decoration: none; font-weight: 500;">
-      Saeed Mojtabazadeh | www.mojtabazadeh.ir
-    </a>
-  </div>
-</body>
-</html>
+    <a href="http://www.instagallery.ir/" target="_blank">اینستاگالری</
