--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="description" content="دکتری ژئوتکنیک، جوان برتر، مجتبی زاده، سعید مجتبی زاده، ژئوتکنیک.">
   <meta name="keywords" content="مجتبی زاده، مجتبی زاده حسنلوئی، سعید مجتبی زاده، دکتری ژئوتکنیک، جوان نمونه، نخبه زنجان">
   <meta name="author" content="Saeed Mojtabazadeh">
-
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
 
@@ -222,5 +221,4 @@
   <div class="link-bar">
     <a href="http://mojtabazadeh.ir/" target="_blank">وبگاه من</a>
     <a href="http://www.drmojtabazadeh.ir/" target="_blank">مقالات من</a>
-    <a href="http://www.smoj.ir/" target="_blank">مطالعات من</a>
-    <a href="http://www.instagallery.ir/" target="_blank">اینستاگالری</
+    <a href="http://www.smoj.ir/" target="_blank">
