--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="دکتری ژئوتکنیک، جوان برتر، مجتبی زاده، سعید مجتبی زاده، ژئوتکنیک.">
   <meta name="keywords" content="مجتبی زاده، مجتبی زاده حسنلوئی، سعید مجتبی زاده، دکتری ژئوتکنیک، جوان نمونه، نخبه زنجان">
   <meta name="author" content="Saeed Mojtabazadeh">
+
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/mojtabazadeh/instagallery.github.io/refs/heads/main/Favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
 
@@ -28,18 +29,15 @@
     }
 
     .profile-pic {
-      width: 180px;
-      height: 180px;
-      border-radius: 55% 45% 60% 40% / 50% 60% 45% 55%;
+      width: 160px;
+      height: 160px;
+      border-radius: 50%;
       overflow: hidden;
       margin-bottom: 16px;
-      box-shadow:
-        0 8px 24px rgba(0,0,0,0.5),
-        inset 0 0 12px rgba(255, 215, 150, 0.3),
-        0 0 10px rgba(255, 200, 100, 0.25);
-      border: 2px solid rgba(255,255,255,0.2);
-      backdrop-filter: blur(4px);
-      animation: frameGlow 8s ease-in-out infinite, floatFrame 6s ease-in-out infinite;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.5);
+      animation: fadeInUp 0.6s ease-out forwards;
+      opacity: 0;
+      transform: translateY(-20px);
     }
 
     .profile-pic img {
@@ -47,27 +45,6 @@
       height: 100%;
       object-fit: cover;
       display: block;
-    }
-
-    @keyframes frameGlow {
-      0%, 100% {
-        box-shadow:
-          0 8px 24px rgba(0,0,0,0.5),
-          inset 0 0 12px rgba(255, 215, 150, 0.3),
-          0 0 10px rgba(255, 200, 100, 0.25);
-      }
-      50% {
-        box-shadow:
-          0 12px 30px rgba(0,0,0,0.6),
-          inset 0 0 18px rgba(255, 230, 180, 0.4),
-          0 0 18px rgba(255, 180, 100, 0.4);
-      }
-    }
-
-    @keyframes floatFrame {
-      0% { transform: translateY(0) rotate(0deg); }
-      50% { transform: translateY(-6px) rotate(1.5deg); }
-      100% { transform: translateY(0) rotate(0deg); }
     }
 
     .title-wrapper {
@@ -79,21 +56,17 @@
     }
 
     .title-line {
-      font-size: 2.4rem;
-      font-weight: 800;
+      font-size: 2rem;
+      font-weight: 700;
       margin: 0;
-      background: radial-gradient(circle at center, #ffeec0, #ffcf70, #f0bb43);
+      background: linear-gradient(90deg, #ffffff 0%, #ffe29e 20%, #ffda74 40%, #ffe29e 60%, #ffffff 80%);
+      background-size: 200% auto;
       background-clip: text;
       -webkit-background-clip: text;
       color: transparent;
       -webkit-text-fill-color: transparent;
-      animation: pulseShine 4s ease-in-out infinite;
-      text-shadow: 0 0 8px rgba(255, 211, 108, 0.6), 0 0 18px rgba(255, 211, 108, 0.3);
-    }
-
-    @keyframes pulseShine {
-      0%, 100% { text-shadow: 0 0 8px rgba(255,211,108,0.6); }
-      50% { text-shadow: 0 0 18px rgba(255,211,108,0.9); }
+      animation: shine 2.5s linear infinite;
+      text-shadow: 0 2px 4px rgba(0,0,0,0.6);
     }
 
     .title-sub {
@@ -102,6 +75,11 @@
       font-weight: 500;
       margin-top: 4px;
       text-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    }
+
+    @keyframes shine {
+      0% { background-position: 200% 0; }
+      100% { background-position: -200% 0; }
     }
 
     .link-bar {
@@ -221,4 +199,23 @@
   <div class="link-bar">
     <a href="http://mojtabazadeh.ir/" target="_blank">وبگاه من</a>
     <a href="http://www.drmojtabazadeh.ir/" target="_blank">مقالات من</a>
-    <a href="http://www.smoj.ir/" target="_blank">
+    <a href="http://www.smoj.ir/" target="_blank">مطالعات من</a>
+    <a href="http://www.instagallery.ir/" target="_blank">اینستاگالری</a>
+  </div>
+
+  <div class="frame-wrapper">
+    <iframe
+      src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false"
+      allow="autoplay; fullscreen"
+      allowfullscreen
+      title="مستند زندگی دکتر سعید مجتبی زاده">
+    </iframe>
+  </div>
+
+  <div class="footer">
+    © <a href="http://www.mojtabazadeh.ir/" target="_blank" style="color: white; text-decoration: none; font-weight: 500;">
+      Saeed Mojtabazadeh | www.mojtabazadeh.ir
+    </a>
+  </div>
+</body>
+</html>
